--- a/odlproxy/odl-proxy-log.ini
+++ b/odlproxy/odl-proxy-log.ini
@@ -13,17 +13,18 @@ keys = simpleFormatter,logfileformatter
 
 [logger_main]
 level = DEBUG
-qualname = eu.softfire
-handlers = consoleHandler
+qualname = odlproxy
+handlers = consoleHandler, logfile
 propagate = 0
 
 [logger_root]
-level = ERROR
+level = DEBUG
 handlers = consoleHandler, logfile
+propagate = 0
 
 [handler_consoleHandler]
 class = StreamHandler
-level = DEBUG
+level = INFO
 formatter = simpleFormatter
 args = (sys.stdout,)
 
@@ -33,7 +34,7 @@ format = %(levelname)s: %(name)s:%(lineno)-20d:  %(message)s
 
 [handler_logfile]
 class = handlers.RotatingFileHandler
-level = DEBUG
+level = INFO
 args = ('/var/log/odlproxy/odlproxy.log', 'a', 2000, 100)
 formatter = logfileformatter
 
