--- a/odlproxy/odl-proxy-log.ini
+++ b/odlproxy/odl-proxy-log.ini
@@ -3,7 +3,7 @@
 ####################################
 
 [loggers]
-keys = main,root
+keys = main,root,pika,nova,bottle,openstacksdk,odlclient,requests.packages.urllib3
 
 [handlers]
 keys = consoleHandler,logfile
@@ -20,7 +20,42 @@ propagate = 0
 [logger_root]
 level = INFO
 handlers = consoleHandler, logfile
+
+[logger_pika]
+level = INFO
+handlers = consoleHandler, logfile
 propagate = 0
+qualname = pika
+
+[logger_requests.packages.urllib3]
+level = DEBUG
+handlers = consoleHandler, logfile
+propagate = 1
+qualname = requests.packages.urllib3
+
+[logger_nova]
+level = INFO
+handlers = consoleHandler, logfile
+propagate = 0
+qualname = nova
+
+[logger_bottle]
+level = DEBUG
+handlers = consoleHandler, logfile
+propagate = 0
+qualname = bottle
+
+[logger_openstacksdk]
+level = INFO
+handlers = consoleHandler, logfile
+propagate = 0
+qualname = openstacksdk
+
+[logger_odlclient]
+level = INFO
+handlers = consoleHandler, logfile
+propagate = 0
+qualname = odlclient
 
 [handler_consoleHandler]
 class = StreamHandler
@@ -29,14 +64,15 @@ formatter = simpleFormatter
 args = (sys.stdout,)
 
 [formatter_logfileformatter]
-#format=%(asctime)s %(name)-12s: %(levelname)s %(message)s
-format = %(levelname)s: %(name)s:%(lineno)-20d:  %(message)s
+#format = %(levelname)s: %(name)s:%(lineno)-20d:  %(message)s
+format = %(asctime)s - %(levelname)s: - %(name)s:%(lineno)-5d - %(message)s
 
 [handler_logfile]
 class = handlers.RotatingFileHandler
 level = DEBUG
-args = ('/var/log/odlproxy/odlproxy.log', 'a', 2000, 100)
+args = ('/var/log/odlproxy/odlproxy.log', 'w')
 formatter = logfileformatter
 
 [formatter_simpleFormatter]
-format = %(levelname)s: %(name)s:%(lineno)-20d:  %(message)s
+#format = %(levelname)s: %(name)s:%(lineno)-20d:  %(message)s
+format = %(asctime)s - %(levelname)s: - %(name)s:%(lineno)-5d - %(message)s
