--- a/odlproxy/odl-proxy-log.ini
+++ b/odlproxy/odl-proxy-log.ini
@@ -30,7 +30,7 @@ qualname = pika
 [logger_requests.packages.urllib3]
 level = DEBUG
 handlers = consoleHandler, logfile
-propagate = 1
+propagate = 0
 qualname = requests.packages.urllib3
 
 [logger_nova]
@@ -69,7 +69,7 @@ format = %(asctime)s - %(levelname)s: - %(name)s:%(lineno)-5d - %(message)s
 
 [handler_logfile]
 class = handlers.RotatingFileHandler
-level = DEBUG
+level = INFO
 args = ('/var/log/odlproxy/odlproxy.log', 'w')
 formatter = logfileformatter
 
