now logger_pika is at INFO level

--- a/odlproxy/odl-proxy-log.ini
+++ b/odlproxy/odl-proxy-log.ini
@@ -22,7 +22,7 @@ level = INFO
 handlers = consoleHandler, logfile
 
 [logger_pika]
-level = DEBUG
+level = INFO
 handlers = consoleHandler, logfile
 propagate = 0
 qualname = pika
